deploy/slai-app-prod/demo-hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-hub
  namespace: slai-app-prod
  labels:
    app.kubernetes.io/name: demo-hub
    app.kubernetes.io/instance: demo-hub
    app.kubernetes.io/managed-by: slai-app-platform
    hosted-by: slai-app-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-hub
    app.kubernetes.io/instance: demo-hub
  ports:
    - name: http
      port: 80
      targetPort: http
